Fix the overflow problem

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -5,7 +5,6 @@
     @include breakpoints-up(large) {
       display: flex;
       align-items: center;
-      overflow-x: hidden;
     }
   }
 
